--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,32 @@ ul {
     width:20%;
     padding: 200px 0;
     margin: 10px;
+    float:left;
 
 }
 
 @media screen and (max-width: 800px) {
+    body{
+        margin:0;
+    }
+    ul {
+        padding:10px 0;
+        margin:0;
+        width:100%;
+
+    }
+    ul li {
+        display:inline-block;
+        width:50%;
+    }
+}
+
+
+@media only screen
+and (min-device-width: 768px)
+and (max-device-width: 1024px)
+and (-webkit-min-device-pixel-ratio: 1) {
+
     ul {
         width:94%;
         padding:10px;
@@ -18,6 +40,7 @@ ul {
         width:50%;
     }
 }
+
 
 ul li {
     list-style-type:none;
@@ -36,4 +59,20 @@ ul li:hover {
     background-color: #558cf1;
     cursor: pointer;
 
+}
+
+table {
+    float: left;
+    height:200px;
+    width:500px;
+    border:1px lightgrey solid;
+    border-spacing:0;
+    margin: 10px 0;
+
+
+}
+
+table tr td, th {
+    border: 1px lightgrey solid;
+    padding:0 50px;
 }
